Updated author and version