@@ -1,3 +1,24 @@
+local function getPlayerRoleAndColor(dungeon)
+    for _, i in ipairs(dungeon.party) do
+        if i.name == dungeon.player then
+            local _class = i.class
+            local classUppercase = string.upper(_class)
+            local class = string.gsub(classUppercase, " ", "")
+            local tbl = RAID_CLASS_COLORS[class]
+            local color = { r = tbl.r, g = tbl.g, b = tbl.b, a = 1 }
+            local role = i.role
+            if role == "TANK" then
+                role = "Tank"
+            elseif role == "DAMAGER" then
+                role = "DPS"
+            else
+                role = "Heal"
+            end
+            return { color = color, hex = tbl.colorStr, role = role }
+        end
+    end
+end
+
 local function getLevelColor(level)
     local idx = 0
     if level > 0 then
@@ -39,12 +60,17 @@ local function prepareRowList(dungeon)
     local level = dungeon.keyDetails.level
     local result = getResultString(dungeon)
     local deaths = dungeon.totalDeaths or 0
+    local time = dungeon.timeToComplete
     local affixes = ConcatTable(dungeon.keyDetails.affixes, ", ")
-    table.insert(row, { value = player })
+
+    local p = getPlayerRoleAndColor(dungeon)
+    local playerString = string.format("(%s) %s", p.role, player)
+    table.insert(row, { value = playerString, color = p.color })
     table.insert(row, { value = name })
     table.insert(row, { value = level, color = getLevelColor(level).color })
     table.insert(row, { value = result.result, color = result.color })
     table.insert(row, { value = deaths, color = getDeathsColor(deaths) })
+    table.insert(row, { value = time, color = result.color })
     table.insert(row, { value = affixes })
     return { cols = row }
 end
