@@ -30,10 +30,14 @@ local fRate = function(key, value)
 end
 
 local fRatePrint = function(key, value)
-    local dungeons = fRate(key,value)
+    local dungeons = fRate(key, value)
     if dungeons then PrintDungeonSuccessRate(dungeons) end
 end
 
+local function noResult()
+    printf("No dungeons matched your filter criteria!", Defaults.colors.chatWarning)
+    return nil
+end
 
 local filterConditions = {
     ["player"] = function(entry, value)
@@ -66,6 +70,9 @@ local filterConditions = {
     ["level"] = function(entry, value)
         return entry.keyDetails.level >= value
     end,
+    ["date"] = function(entry, value)
+        return entry.date == value
+    end,
     ["affix"] = function(entry, value)
         local affixes = string.lower(table.concat(entry.keyDetails.affixes))
         local found = 0
@@ -80,6 +87,9 @@ local filterConditions = {
             end
         end
         return found == (#value - 1)
+    end,
+    ["role"] = function(entry, value)
+        return
     end
 }
 
@@ -94,6 +104,7 @@ function FilterData(tbl, key, value)
         Log(string.format("FILTER <%s> <%s>", key, tostring(value)))
     elseif #_key <= 3 and #value == 0 then
         value = Defaults.dungeonNamesShort[key]
+        if not value then return noResult() end
         _key = "name"
         Log(string.format("FILTER <%s> <%s>", _key, tostring(value)))
     elseif _key == "completed" then
@@ -124,12 +135,20 @@ function FilterData(tbl, key, value)
     elseif _key == "season" then
         if #value == 0 then value = Defaults.dungeonDefault.season end
         Log(string.format("FILTER <%s> <%s>", key, tostring(value)))
+    elseif _key == "date" then
+        if #value == 0 then value = date(Defaults.dateFormat) end
+        Log(string.format("FILTER <%s> <%s>", key, tostring(value)))
+    elseif _key == "role" then
+        printf("Role filter is not yet implemented!", Defaults.colors.chatWarning)
+        return nil
     end
 
     -- Table filtering
     for _, entry in ipairs(tbl) do
         if _key == "season" and entry[_key] ~= nil then
-            if string.lower(entry[_key]) == string.lower(value) then
+            if value == "all" then
+                table.insert(result, entry)
+            elseif string.lower(entry[_key]) == string.lower(value) then
                 table.insert(result, entry)
             end
         elseif entry["season"] == Defaults.dungeonDefault.season then
@@ -143,8 +162,7 @@ function FilterData(tbl, key, value)
         end
     end
     if #result == 0 then
-        printf("No dungeons matched your filter criteria!", Defaults.colors.chatWarning)
-        return nil
+        return noResult()
     end
     return result
 end
