@@ -1,4 +1,4 @@
-AddonName = "KeyCount"
+AddonName = "KeyCount_dev"
 KeyCount = CreateFrame("Frame", "KeyCount")
 
 
